corrected navbar for skills

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </nav>
 
-  <!-- Hero Section with GIF Background -->
+  <!-- Hero Section  -->
   <section id="home" class="d-flex align-items-center justify-content-center text-center" style="height: 100vh;">
     <div class="image-background"></div>
     <div class="container d-flex align-items-center justify-content-between">
@@ -75,7 +75,7 @@
     </div>
   </section>
   
-  <section class="skill-section">
+  <section id="skills" class="skill-section">
     <h2>My Skills</h2>
     <div class="skill-buttons">
       <button class="skill-btn">C++</button>
